--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Welcome to Kaitlin's homepage
+description: I'm learning how to use GitHub so check back soon for improved changes
